Fixed an layout issue.

--- a/assets/custom/homepage.theme.css
+++ b/assets/custom/homepage.theme.css
@@ -3,7 +3,7 @@ html{
 }
 
 body {
-	padding-top: 48px;
+	padding-top: 44px;
 	position: relative;
 	min-height: 100%;
 }
